Tested out native queries on MariabDB (MySQL)

--- a/code/pv-10-spring-data-repositories/src/main/resources/application.properties
+++ b/code/pv-10-spring-data-repositories/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 
+spring.datasource.url=jdbc:mysql://localhost:3306/my_database
+spring.datasource.username=root
+spring.datasource.password=root11
+#spring.jpa.database-platform=org.hibernate.dialect.mysql5innodbdialect
+spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.mysql5innodbdialect
+spring.jpa.hibernate.ddl-auto=update
